WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23292
WebKit
r39852
crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=23292
Summary
WebKit r39852 crashes on launch
Craig W. Cadwallader
Reported
2009-01-13 07:39:47 PST
WebKit nightly
r39852
crashes every time attempted to launch
Attachments
crash report text
(29.79 KB, text/plain)
2009-01-13 07:41 PST
,
Craig W. Cadwallader
no flags
Details
crash report for r39851
(30.52 KB, text/plain)
2009-01-13 12:40 PST
,
Craig W. Cadwallader
no flags
Details
The patch
(1.90 KB, patch)
2009-01-13 16:11 PST
,
Gavin Barraclough
no flags
Details
Formatted Diff
Diff
The other patch
(1.39 KB, patch)
2009-01-13 16:13 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
crash report for r39872
(29.74 KB, text/plain)
2009-01-13 17:56 PST
,
Craig W. Cadwallader
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Craig W. Cadwallader
Comment 1
2009-01-13 07:41:28 PST
Created
attachment 26668
[details]
crash report text
Mark Rowe (bdash)
Comment 2
2009-01-13 12:26:51 PST
***
Bug 23299
has been marked as a duplicate of this bug. ***
Craig W. Cadwallader
Comment 3
2009-01-13 12:40:46 PST
Created
attachment 26679
[details]
crash report for
r39851
crash on launch
r39851
Craig W. Cadwallader
Comment 4
2009-01-13 12:43:00 PST
meant this comment -
r39839
does NOT crash on launch - with
Comment #3
but got cut off when attaching report - sorry:
Mark Rowe (bdash)
Comment 5
2009-01-13 13:38:38 PST
***
Bug 23301
has been marked as a duplicate of this bug. ***
Shawn
Comment 6
2009-01-13 14:52:48 PST
(In reply to
comment #4
)
> meant this comment -
r39839
does NOT crash on launch - with
Comment #3
but got > cut off when attaching report - sorry: >
Reference is to
r39851
and
r39872
, DO Crash upon launch. Reproducible. Sent crash log, I'm new to Bugzilla, not Webkit nightlies used as the primary browser.
r39839
does NOT crash upon launch. I reverted.
Gavin Barraclough
Comment 7
2009-01-13 16:11:48 PST
Created
attachment 26686
[details]
The patch Yep, I seem to have broken the interpreter pretty nastily in
r39851
.
Gavin Barraclough
Comment 8
2009-01-13 16:13:31 PST
Created
attachment 26687
[details]
The other patch Gah, - platform.h change.
Darin Adler
Comment 9
2009-01-13 16:15:13 PST
Comment on
attachment 26687
[details]
The other patch r=me Why not & rather than &&?
Gavin Barraclough
Comment 10
2009-01-13 16:16:19 PST
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/runtime/JSImmediate.h Transmitting file data .. Committed revision 39879.
Craig W. Cadwallader
Comment 11
2009-01-13 17:56:03 PST
Created
attachment 26701
[details]
crash report for
r39872
Craig W. Cadwallader
Comment 12
2009-01-13 17:57:56 PST
crash on launch continues with
r39872
(see attached crash report) Should this be entered as new bug report?
Gavin Barraclough
Comment 13
2009-01-13 18:36:19 PST
Craig, This should be fixed in revision
r39879
. If you see crashes on
r39879
or above, please reopen this bug and check it's assigned to me, & I'll fix. But fingers crossed, I think all platforms should now be good. Many thanks, Gavin.
Shawn
Comment 14
2009-01-13 21:44:07 PST
(In reply to
comment #13
)
> Craig, > > This should be fixed in revision
r39879
. If you see crashes on
r39879
or > above, please reopen this bug and check it's assigned to me, & I'll fix. But > fingers crossed, I think all platforms should now be good. > > Many thanks, > Gavin. >
Resolved
Craig W. Cadwallader
Comment 15
2009-01-13 22:48:24 PST
(In reply to
comment #13
)
> Craig, > > This should be fixed in revision
r39879
. If you see crashes on
r39879
or > above, please reopen this bug and check it's assigned to me, & I'll fix. But > fingers crossed, I think all platforms should now be good. > > Many thanks, > Gavin. >
Gavin,
r39879
wasn't posted to the nightlies list but
r39881
and
r39882
are and the problem is resolved. Thanks! Craig
Gavin Barraclough
Comment 16
2009-01-14 15:08:28 PST
***
Bug 23293
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug