2009-01-13  Gavin Barraclough  <barraclough@apple.com>

Reviewed by Oliver Hunt.

        Fix for: https://bugs.webkit.org/show_bug.cgi?id=23292

        Implementation of two argument canDoFastAdditiveOperations does not correlate well with reality.

        * runtime/JSImmediate.h:
        (JSC::JSFastMath::canDoFastAdditiveOperations):



Canonical link: https://commits.webkit.org/32077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39879 268f45cc-cd09-0410-ab3c-d52691b4dbfc